# ecris-neutral-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  argon_data.h  cgal_and_typedefs.h  constants.h  electronmodel.cpp  electronmodel.h  element_data.h  grid.h  lotz.cpp  lotz.h  main.cpp  memo  myparser.py  particle.cpp  particle.h  plot.py  randutils.hpp  run-cmake  simulationmodel.cpp  simulationmodel.h  surface.cpp  surface.h  util.cpp  util.h  velocity.py
app/hiisi_plasma_volume/: CMakeLists.txt  main.cpp  plasma_volume.txt  plot.py  slice.py
include/: STL_reader.h  argon_data.h  cgal_and_typedefs.h  chargeexchangereaction.h  collisiongenerator.h  collisionreaction.h  constants.h  densitydistribution.h  electronionizationreaction.h  electronmodel.h  element_data.h  flychkparser.h  grid.h  logger.h  lotz.h  maxwellianpopulation.h  neutralizationchannel.h  neutralizationgenerator.h  neutralsource.h  particle.h  particlepopulation.h  plasmadensities.h  recombination.h  simpleplasmamodel.h  simulationmodel.h  spatialdistribution.h  surface.h  surfacecollection.h  surfaceemission.h  util.h  vector3d.h  wallneutralization.h
lib/: STL_reader.cpp  chargeexchangereaction.cpp  collisiongenerator.cpp  collisionreaction.cpp  densitydistribution.cpp  electronionizationreaction.cpp  electronmodel.cpp  element_data.cpp  flychkparser.cpp  grid.cpp  logger.cpp  maxwellianpopulation.cpp  neutralizationchannel.cpp  neutralizationgenerator.cpp  particle.cpp  particlepopulation.cpp  plasmadensities.cpp  recombination.cpp  simpleplasmamodel.cpp  simulationmodel.cpp  surface.cpp  (+5 more)
(+112 files in other folders)
